# dnd-portrait-search

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  pyproject.toml
dataset/v1/: brutal-warrior.yaml  dreamy-woman.yaml  elf-fire-blades.yaml  gnome-rogue.yaml  human-druid-cleric.yaml  inquisitor-hammer.yaml  man-portrait.yaml  org-twohanded-rogue.yaml  red-cape-assasin.yaml  tanky.yaml
experiments/: Rework test dataset n2.ipynb  chunking strategies.ipynb  try langchain.ipynb  try vector search.ipynb
infra/atlas/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
portrait_search/: config.py  data_sources.py  dependencies.py  do_experiments.py  generate_descriptions.py  generate_embeddings.py  sources.yaml  validate_datasets.py
portrait_search/core/: __init__.py  config.py  entity.py  enums.py  logging.py  mongodb.py
portrait_search/data_source/: base.py  config.py  data_sources.yaml  nexus.py
portrait_search/data_sources/: __init__.py  base.py  config.py  config.yaml  nexus.py
portrait_search/embeddings/: __init__.py  distance.py  embedders.py  entities.py  repository.py  splitters.py  t2v.py
portrait_search/entities/: portrait.py
portrait_search/open_ai/: __init__.py  client.py  queries.py
portrait_search/plt/: mongodb.py
portrait_search/portrait/: __init__.py  entity.py  repository.py  service.py
portrait_search/portraits/: __init__.py  entities.py  repository.py
portrait_search/quality/: dataset.py  experiments.py  judge.py  metrics.py
portrait_search/retrieval/: __init__.py  atlas.py  retriever.py  similarity.py
tests/: conftest.py  test_generate_descriptions.py  test_generate_embeddings.py
tests/core/: test_mongodb.py
tests/data_sources/: test_config.py  test_nexus.py
tests/embeddings/: conftest.py  test_embedders.py  test_repository.py  test_splitters.py  test_t2v.py
tests/portraits/: test_portrait_repository.py
tests/quality/: test_dataset.py  test_judge.py  test_metrics.py
tests/retrieval/: test_atlas.py  test_similarity.py
